Import mocha as test framework and add  all test cases

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "mocha"
   },
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/RandallWang/CSCI_651_Assignment1/issues"
   },
-  "homepage": "https://github.com/RandallWang/CSCI_651_Assignment1#readme"
+  "homepage": "https://github.com/RandallWang/CSCI_651_Assignment1#readme",
+  "devDependencies": {
+    "mocha": "^10.0.0"
+  }
 }
